--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Document</title>
 </head>
 
 <body>
-    <div id="app" />
-    <script type="module" src="./main.jsx"></script>
+    <script src="main.ts" />
 </body>
+
 
 </html>
