--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
 </head>
 
 <body>
-    <script src="main.ts" />
+    <div id="app" />
+    <script type="module" src="./main.jsx"></script>
+    
 </body>
 
 
